--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="third-section">
   <h3 class="same">Ingredients</h3>
 
-  <ol></ol><li> 2-3 large eggs</li>
+  <li> 2-3 large eggs</li>
   <li> Salt, to taste</li>
   <li> Pepper, to taste</li>
   <li> 1 tablespoon of butter or oil</li>
@@ -46,52 +46,62 @@
   <h3 class="same">Instructions</h3>
     <ol>
       <li>
-   Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+   <strong> Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
   You can add a tablespoon of water or milk for a fluffier texture.
   </li>
   <li>
-   Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+   <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
   </li><li>
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+  <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
   the eggs evenly coat the surface.
   </li>
   <li>
-   Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+   <strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly runny in the
   middle, sprinkle your chosen fillings over one half of the omelette.
   </li>
   <li>
-   Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+   <strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over the
   fillings. Let it cook for another minute, then slide it onto a plate.
   </li>
   <li>
-   Enjoy: Serve hot, with additional salt and pepper if needed.
+   <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
   </li></ol>
+   
   </div>
-  <hr>
+ <hr>
   <div class="fifth-section">
   <h3 class="same">Nutrition</h3>
   <table>
-    <tr>
-      <th>Calories</th>
-      <td>277kcal</td>
-    </tr>
-    <hr>
-    <tr>
-      <th>Carbs</th>
-      <td>0g</td>
-    </tr>
-    <hr>
-    <tr>
-      <th>Protein</th>
-      <td>20g</td>
-    </tr>
-    <hr>
-    <tr>
-      <th>Fat</th>
-      <td>22g</td>
-    </tr>
-    
+    <table>
+      <tr>
+        <td class="padd">Calories</td>
+        <td><strong> 277 kcal</strong></td>
+      </tr>
+      <tr>
+        <td colspan="2"><hr></td> <!-- خط فاصل -->
+      </tr>
+      <tr>
+        <td class="padd">Carbs</td>
+        <td ><strong> 0 g </strong></td>
+      </tr>
+      <tr>
+        <td colspan="2"><hr></td> <!-- خط فاصل -->
+      </tr>
+      <tr>
+        <td class="padd">Protein</td>
+        <td><strong> 20 g</strong></td>
+      </tr>
+      <tr>
+        <td colspan="2"><hr></td> <!-- خط فاصل -->
+      </tr>
+      <tr>
+        <td class="padd">Fat</td>
+        <td ><strong>22 g</strong></td>
+      </tr>
+    </table>
+
   </table>
+  </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
